# yap

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  build.jam  expression.hpp  expression_fwd.hpp  index.html  operators.hpp  print.hpp  requirements.txt  sketch.cpp  user_macros.hpp
benchmark-v1.1.0/: CMakeLists.txt
benchmark-v1.1.0/src/: CMakeLists.txt
benchmark/test/: output_test_helper.cc
boost/yap/: algorithm.hpp  algorithm_fwd.hpp  config.hpp  expression.hpp  expression_free_operators.hpp  expression_fwd.hpp  operators.hpp  print.hpp  user_macros.hpp  yap.hpp
boost/yap/detail/: algorithm.hpp  default_eval.hpp  expression.hpp
cmake/: dependencies.cmake
detail/: default_eval.hpp  expression.hpp
doc/: CMakeLists.txt  Jamfile.v2  codegen.qbk  concepts.qbk  configuration.qbk  examples.qbk  headers.qbk  intro.qbk  manual.qbk  other_snippets.cpp  primer.qbk  rationale.qbk  the_yap_way.qbk  tutorial.qbk  user_macros_snippets.cpp  yap.idx  yap.qbk
doc/html/: BOOST_NO_CONSTEXPR_IF.html  BOOST_YAP_CONVERSION_OPERATOR_TEMPLATE.html  BOOST_YAP_USER_ASSIGN_OPERATOR.html  BOOST_YAP_USER_ASSIGN_OPERATOR_MEMBER.html  BOOST_YAP_USER_AS_idm15557.html  BOOST_YAP_USER_BINARY_OPERATOR.html  BOOST_YAP_USER_BINARY_OPERATOR_MEMBER.html  BOOST_YAP_USER_BI_idm15530.html  BOOST_YAP_USER_CALL_OPERATOR.html  BOOST_YAP_USER_CALL_OPERATOR_N.html  BOOST_YAP_USER_CA_idm15598.html  BOOST_YAP_USER_CA_idm15615.html  BOOST_YAP_USER_EXPR_IF_ELSE.html  BOOST_YAP_USER_EX_idm15635.html  BOOST_YAP_USER_FREE_BINARY_OPERATOR.html  BOOST_YAP_USER_LITERAL_PLACEHOLDER_OPERATOR.html  BOOST_YAP_USER_LI_idm15757.html  BOOST_YAP_USER_MEMBER_CALL_OPERATOR.html  BOOST_YAP_USER_NONMEMBER_BINARY_OPERATOR.html  BOOST_YAP_USER_SUBSCRIPT_OPERATOR.html  BOOST_YAP_USER_SU_idm15579.html  BOOST_YAP_USER_UDT_ANY_BINARY_OPERATOR.html  BOOST_YAP_USER_UDT_ANY_IF_ELSE.html  BOOST_YAP_USER_UDT_UDT_BINARY_OPERATOR.html  BOOST_YAP_USER_UDT_UNARY_OPERATOR.html  BOOST_YAP_USER_UD_idm15652.html  BOOST_YAP_USER_UD_idm15674.html  BOOST_YAP_USER_UD_idm15697.html  BOOST_YAP_USER_UD_idm15730.html  BOOST_YAP_USER_UNARY_OPERATOR.html  BOOST_YAP_USER_UNARY_OPERATOR_MEMBER.html  BOOST_YAP_USER_UN_idm15505.html  index.html  reference.html  standalone_HTML.manifest
doc/html/boost/yap/: argument.html  as_expr_idm14410.html  as_expr_idm14581.html  as_expr_idm14591.html  as_expr_idm15469.html  as_expr_idm15472.html  as_expr_idm16053.html  as_expr_idp140186473452104.html  as_expr_idp140186473884056.html  as_expr_idp140214351942984.html  as_expr_idp140214352368856.html  as_expr_idp140239779424056.html  as_expr_idp140239779867624.html  as_expr_idp140256022926776.html  as_expr_idp140256023374984.html  as_expr_idp140279454222216.html  as_expr_idp140279454649528.html  as_expr_idp140292626073272.html  as_expr_idp140292626515400.html  as_expr_idp140334558220232.html  as_expr_idp140334558654328.html  as_expr_idp140336998582312.html  as_expr_idp140336999008184.html  as_expr_idp140372495018360.html  as_expr_idp140372495024888.html  as_expr_idp140449299311032.html  as_expr_idp140449299761384.html  as_expr_idp140466766294056.html  as_expr_idp140466766737624.html  as_expr_idp140479259816344.html  as_expr_idp140479259822872.html  as_expr_idp140497499939320.html  as_expr_idp140497500366632.html  as_expr_idp140591201244680.html  as_expr_idp140591201671992.html  as_expr_idp140597636676536.html  as_expr_idp140597637102104.html  as_expr_idp140643426418264.html  as_expr_idp140643467144392.html  as_expr_idp140703490058440.html  (+355 more)
doc/html/boost_yap/: compiler_support.html  concepts.html  dependencies.html  introduction.html  manual.html  rationale.html
doc/html/boost_yap/manual/: an_expression_template_primer.html  configuration.html  evaluating_expressions.html  examples.html  expressions.html  header_organization.html  how_expression_operands_are_treated.html  kinds_of_expressions.html  mix_and_match_expression_templates.html  object_code.html  operator_macros.html  operators.html  printing.html  the_yap_way.html  transforming_expressions.html
doc/html/boost_yap__proposed_/: compiler_support.html  concepts.html  dependencies.html  introduction.html  manual.html  rationale.html
doc/html/boost_yap__proposed_/manual/: an_expression_template_primer.html  configuration.html  evaluating_expressions.html  examples.html  expressions.html  header_organization.html  how_expression_operands_are_treated.html  kinds_of_expressions.html  (+8 more)
doc/html/index/: s07.html  s08.html  s09.html
example/: CMakeLists.txt  autodiff_example.cpp  calc1.cpp  calc2a.cpp  calc2b.cpp  calc3.cpp  future_group.cpp  hello_world.cpp  hello_world_redux.cpp  lazy_vector.cpp  let.cpp  map_assign.cpp  minimal.cpp  mixed.cpp  pipable_algorithms.cpp  self_evaluation.cpp  tarray.cpp  transform_terminals.cpp  vec3.cpp  vector.cpp
example/autodiff_library/: autodiff.h
include/boost/yap/: algorithm.hpp  algorithm_fwd.hpp  config.hpp  expression.hpp  expression_free_operators.hpp  expression_if_else.hpp  print.hpp  user_macros.hpp  yap.hpp
perf/: CMakeLists.txt  arithmetic_perf.cpp  code_gen_samples.cpp  lazy_vector_perf.cpp  map_assign_code_gen.cpp  map_assign_perf.cpp
test/: CMakeLists.txt  Jamfile.v2  call_expr.cpp  call_expr_implicit.cpp  code_gen_samples.cpp  comma.cpp  compile_const_term.cpp  compile_copy_only_types.cpp  compile_is_expr.cpp  compile_move_only_types.cpp  compile_placeholders.cpp  compile_term_plus_expr.cpp  compile_term_plus_term.cpp  compile_term_plus_x.cpp  compile_term_plus_x_this_ref_overloads.cpp  compile_tests_main.cpp  compile_user_macros.cpp  compile_x_plus_term.cpp  default_eval.cpp  depth_stress_test.cpp  depth_stress_test_left.cpp  depth_stress_test_right.cpp  deref.cpp  expression_function.cpp  if_else.cpp  lazy_vector_alloc_test.cpp  left.cpp  operators_unary.cpp  placeholder_eval.cpp  print.cpp  reference_returns.cpp  right.cpp  supplied_transforms.cpp  transform.cpp  user_eval_expression_as.cpp  user_expression_transform.cpp  user_expression_transform_1.cpp  user_expression_transform_2.cpp  user_expression_transform_3.cpp  user_expression_transform_4.cpp  (+4 more)
(+81 files in other folders)
