include_directories(${CMAKE_HOME_DIRECTORY})

macro(add_sample name)
    add_executable(${name} ${name}.cpp)
    target_link_libraries(${name} c++)
endmacro()

add_sample(hello_world)
add_sample(calc1)
add_sample(calc2a)
add_sample(calc2b)
add_sample(calc3)
add_sample(lazy_vector)
add_sample(tarray)
add_sample(vec3)
add_sample(vector)
add_sample(mixed)
